--- a/index.html
+++ b/index.html
@@ -1,38 +1,66 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>후즈아트 청바지팀 공연 후보곡</title>
+  <title>후즈아트 공연 투표</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>🎶 예술기획단체 후즈아트 10기 청바지팀 공연 후보곡</h1>
-    <p class="subtitle">이번 공연에 사용할 음악들입니다. 여러분들의 곡을 골라주세요.</p>
-    <ul>
-      <li><a href="https://www.youtube.com/results?search_query=A+Whole+New+World+알라딘" target="_blank">A Whole New World, 알라딘</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=Bundle+of+Joy+인사이드+아웃" target="_blank">Bundle of Joy, 인사이드 아웃</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=How+Far+I’ll+Go+모아나" target="_blank">How Far I’ll Go, 모아나</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=I+See+the+Light+라푼젤" target="_blank">I See the Light, 라푼젤</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=Le+Festin+라따뚜이" target="_blank">Le Festin, 라따뚜이</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=Sparkle+너의+이름은" target="_blank">Sparkle, 너의 이름은</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=Steal+The+Show+엘리멘탈" target="_blank">Steal The Show, 엘리멘탈</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=This+is+me+위대한+쇼맨" target="_blank">This is me, 위대한 쇼맨</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=Try+Everything+주토피아" target="_blank">Try Everything, 주토피아</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=すずめ+(Suzume)+스즈메의+문단속" target="_blank">すずめ (Suzume), 스즈메의 문단속</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=너를+태우고+천공의+성+라퓨타" target="_blank">너를 태우고, 천공의 성 라퓨타</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=바다가+보이는+마을+마녀+배달부+키키" target="_blank">바다가 보이는 마을, 마녀 배달부 키키</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=벼랑+위의+포뇨+벼랑+위의+포뇨" target="_blank">벼랑 위의 포뇨, 벼랑 위의 포뇨</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=산책+이웃집+토토로" target="_blank">산책, 이웃집 토토로</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=세계의+약속+하울의+움직이는+성" target="_blank">세계의 약속, 하울의 움직이는 성</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=아시타카의+전설+원령공주" target="_blank">아시타카의 전설, 원령공주</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=어느+여름날+센과+치히로의+행방불명" target="_blank">어느 여름날, 센과 치히로의 행방불명</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=오월의+마을+이웃집+토토로" target="_blank">오월의 마을, 이웃집 토토로</a></li>
-      <li><a href="https://www.youtube.com/results?search_query=인생의+회전목마+하울의+움직이는+성" target="_blank">인생의 회전목마, 하울의 움직이는 성</a></li>
-
-    </ul>
+    <h1>🎶 예술기획단체 후즈아트 10기 청바지팀 공연 후보곡 투표</h1>
+    <p class="subtitle">이번 공연에 사용할 음악들입니다. 마음에 드는 곡을 모두 선택해 주세요!</p>
+    <form id="voteForm">
+      <ul id="songList">
+      </ul>
+      <button type="submit">🎤 투표 제출</button>
+    </form>
+    <p id="confirmation" class="hidden">✅ 감사합니다! 투표가 제출되었습니다.</p>
   </div>
+
+  <script>
+    const songs = [
+      "A Whole New World, 알라딘",
+      "Bundle of Joy, 인사이드 아웃",
+      "How Far I’ll Go, 모아나",
+      "I See the Light, 라푼젤",
+      "Le Festin, 라따뚜이",
+      "Sparkle, 너의 이름은",
+      "Steal The Show, 엘리멘탈",
+      "This is me, 위대한 쇼맨",
+      "Try Everything, 주토피아",
+      "すずめ (Suzume), 스즈메의 문단속",
+      "너를 태우고, 천공의 성 라퓨타",
+      "바다가 보이는 마을, 마녀 배달부 키키",
+      "벼랑 위의 포뇨, 벼랑 위의 포뇨",
+      "산책, 이웃집 토토로",
+      "세계의 약속, 하울의 움직이는 성",
+      "아시타카의 전설, 원령공주",
+      "어느 여름날, 센과 치히로의 행방불명",
+      "오월의 마을, 이웃집 토토로",
+      "인생의 회전목마, 하울의 움직이는 성"
+    ];
+
+    const songList = document.getElementById("songList");
+
+    songs.forEach((song, index) => {
+      const li = document.createElement("li");
+      li.innerHTML = \`
+        <label>
+          <input type="checkbox" name="song" value="\${song}" />
+          \${song}
+        </label>
+      \`;
+      songList.appendChild(li);
+    });
+
+    document.getElementById("voteForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const checkedSongs = Array.from(document.querySelectorAll("input[name='song']:checked")).map(cb => cb.value);
+      console.log("선택한 곡들:", checkedSongs);
+      localStorage.setItem("votedSongs", JSON.stringify(checkedSongs));
+      document.getElementById("confirmation").classList.remove("hidden");
+    });
+  </script>
 </body>
 </html>
