--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       ];
 
       const list = document.getElementById("songList");
-      songs.forEach((song, index) => {
+      songs.forEach((song) => {
         const li = document.createElement("li");
         li.innerHTML = \`
           <label class="song-item">
