--- a/results.html
+++ b/results.html
@@ -28,13 +28,17 @@
     onValue(votesRef, snapshot => {
       const data = snapshot.val();
       const counts = {};
-      for (const song in data) {
-        counts[song] = Object.keys(data[song]).length;
+      if (data) {
+        for (const song in data) {
+          counts[song] = Object.keys(data[song]).length;
+        }
       }
+
       const labels = Object.keys(counts);
       const values = Object.values(counts);
 
-      new Chart(document.getElementById("chart"), {
+      const ctx = document.getElementById("chart").getContext("2d");
+      new Chart(ctx, {
         type: "bar",
         data: {
           labels,
