--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
 <body>
   <div class="container">
     <h1>🎶 청바지팀 공연 투표</h1>
-    <p class="subtitle">마음에 드는 곡을 모두 선택하고 투표해주세요!</p>
+    <p class="subtitle">마음에 드는 곡을 모두 선택하고 투표해주세요! 제목을 클릭하면 유튜브 검색으로 이동해요 🎧</p>
     <form onsubmit="event.preventDefault(); submitVote();">
       <ul class="song-list">
-        <li><label><input type="checkbox" name="song" value="A Whole New World, 알라딘" />A Whole New World, 알라딘</label></li>
-        <li><label><input type="checkbox" name="song" value="Bundle of Joy, 인사이드 아웃" />Bundle of Joy, 인사이드 아웃</label></li>
-        <li><label><input type="checkbox" name="song" value="How Far I’ll Go, 모아나" />How Far I’ll Go, 모아나</label></li>
-        <li><label><input type="checkbox" name="song" value="I See the Light, 라푼젤" />I See the Light, 라푼젤</label></li>
-        <li><label><input type="checkbox" name="song" value="Le Festin, 라따뚜이" />Le Festin, 라따뚜이</label></li>
-        <li><label><input type="checkbox" name="song" value="Sparkle, 너의 이름은" />Sparkle, 너의 이름은</label></li>
-        <li><label><input type="checkbox" name="song" value="Steal The Show, 엘리멘탈" />Steal The Show, 엘리멘탈</label></li>
-        <li><label><input type="checkbox" name="song" value="This is me, 위대한 쇼맨" />This is me, 위대한 쇼맨</label></li>
-        <li><label><input type="checkbox" name="song" value="Try Everything, 주토피아" />Try Everything, 주토피아</label></li>
+        <li><label><input type="checkbox" name="song" value="A Whole New World, 알라딘" /><a href="https://www.youtube.com/results?search_query=A+Whole+New+World+알라딘" target="_blank">A Whole New World, 알라딘</a></label></li>
+        <li><label><input type="checkbox" name="song" value="Bundle of Joy, 인사이드 아웃" /><a href="https://www.youtube.com/results?search_query=Bundle+of+Joy+인사이드+아웃" target="_blank">Bundle of Joy, 인사이드 아웃</a></label></li>
+        <li><label><input type="checkbox" name="song" value="How Far I’ll Go, 모아나" /><a href="https://www.youtube.com/results?search_query=How+Far+I’ll+Go+모아나" target="_blank">How Far I’ll Go, 모아나</a></label></li>
+        <li><label><input type="checkbox" name="song" value="I See the Light, 라푼젤" /><a href="https://www.youtube.com/results?search_query=I+See+the+Light+라푼젤" target="_blank">I See the Light, 라푼젤</a></label></li>
+        <li><label><input type="checkbox" name="song" value="Le Festin, 라따뚜이" /><a href="https://www.youtube.com/results?search_query=Le+Festin+라따뚜이" target="_blank">Le Festin, 라따뚜이</a></label></li>
+        <li><label><input type="checkbox" name="song" value="Sparkle, 너의 이름은" /><a href="https://www.youtube.com/results?search_query=Sparkle+너의+이름은" target="_blank">Sparkle, 너의 이름은</a></label></li>
+        <li><label><input type="checkbox" name="song" value="Steal The Show, 엘리멘탈" /><a href="https://www.youtube.com/results?search_query=Steal+The+Show+엘리멘탈" target="_blank">Steal The Show, 엘리멘탈</a></label></li>
+        <li><label><input type="checkbox" name="song" value="This is me, 위대한 쇼맨" /><a href="https://www.youtube.com/results?search_query=This+is+me+위대한+쇼맨" target="_blank">This is me, 위대한 쇼맨</a></label></li>
+        <li><label><input type="checkbox" name="song" value="Try Everything, 주토피아" /><a href="https://www.youtube.com/results?search_query=Try+Everything+주토피아" target="_blank">Try Everything, 주토피아</a></label></li>
       </ul>
       <button type="submit">🎤 투표 제출</button>
     </form>
