--- a/results.html
+++ b/results.html
@@ -27,15 +27,23 @@
 
     onValue(votesRef, snapshot => {
       const data = snapshot.val();
+      console.log("✅ 가져온 데이터:", data);
       const counts = {};
       if (data) {
         for (const song in data) {
           counts[song] = Object.keys(data[song]).length;
         }
+      } else {
+        console.warn("❌ 데이터 없음");
       }
 
       const labels = Object.keys(counts);
       const values = Object.values(counts);
+
+      if (labels.length === 0) {
+        document.getElementById("chart").outerHTML = "<p>아직 투표된 곡이 없습니다 😢</p>";
+        return;
+      }
 
       const ctx = document.getElementById("chart").getContext("2d");
       new Chart(ctx, {
