--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       messagingSenderId: "619925483736",
       appId: "1:619925483736:web:459b09d355994a4ff567ad",
       measurementId: "G-BCRNTEQDDS",
-      databaseURL: "https://result-c03f9-default-rtdb.asia-southeast1.firebasedatabase.app/"
+      databaseURL: "https://result-c03f9-default-rtdb.firebaseio.com"
     };
 
     const app = initializeApp(firebaseConfig);
