--- a/index.html
+++ b/index.html
@@ -40,18 +40,29 @@
 <body>
   <div class="container">
     <h1>🎶 청바지팀 공연 투표</h1>
-    <p class="subtitle">마음에 드는 곡을 모두 선택하고 투표해주세요! 제목을 클릭하면 유튜브 검색으로 이동해요 🎧</p>
+    <p class="subtitle">마음에 드는 곡을 모두 선택하고 투표해주세요! 제목을 클릭하면 유튜브로 이동해요 🎧</p>
     <form onsubmit="event.preventDefault(); submitVote();">
       <ul class="song-list">
-        <li><label><input type="checkbox" name="song" value="A Whole New World, 알라딘" /><a href="https://www.youtube.com/results?search_query=A+Whole+New+World+알라딘" target="_blank">A Whole New World, 알라딘</a></label></li>
-        <li><label><input type="checkbox" name="song" value="Bundle of Joy, 인사이드 아웃" /><a href="https://www.youtube.com/results?search_query=Bundle+of+Joy+인사이드+아웃" target="_blank">Bundle of Joy, 인사이드 아웃</a></label></li>
-        <li><label><input type="checkbox" name="song" value="How Far I’ll Go, 모아나" /><a href="https://www.youtube.com/results?search_query=How+Far+I’ll+Go+모아나" target="_blank">How Far I’ll Go, 모아나</a></label></li>
-        <li><label><input type="checkbox" name="song" value="I See the Light, 라푼젤" /><a href="https://www.youtube.com/results?search_query=I+See+the+Light+라푼젤" target="_blank">I See the Light, 라푼젤</a></label></li>
-        <li><label><input type="checkbox" name="song" value="Le Festin, 라따뚜이" /><a href="https://www.youtube.com/results?search_query=Le+Festin+라따뚜이" target="_blank">Le Festin, 라따뚜이</a></label></li>
-        <li><label><input type="checkbox" name="song" value="Sparkle, 너의 이름은" /><a href="https://www.youtube.com/results?search_query=Sparkle+너의+이름은" target="_blank">Sparkle, 너의 이름은</a></label></li>
-        <li><label><input type="checkbox" name="song" value="Steal The Show, 엘리멘탈" /><a href="https://www.youtube.com/results?search_query=Steal+The+Show+엘리멘탈" target="_blank">Steal The Show, 엘리멘탈</a></label></li>
-        <li><label><input type="checkbox" name="song" value="This is me, 위대한 쇼맨" /><a href="https://www.youtube.com/results?search_query=This+is+me+위대한+쇼맨" target="_blank">This is me, 위대한 쇼맨</a></label></li>
-        <li><label><input type="checkbox" name="song" value="Try Everything, 주토피아" /><a href="https://www.youtube.com/results?search_query=Try+Everything+주토피아" target="_blank">Try Everything, 주토피아</a></label></li>
+        <li><label><input type="checkbox" name="song" value="A Whole New World – 알라딘" /><a href="https://www.youtube.com/watch?v=XUSjObJku0Q" target="_blank">A Whole New World – 알라딘</a></label></li>
+<li><label><input type="checkbox" name="song" value="Bundle of Joy – 인사이드 아웃" /><a href="https://www.youtube.com/watch?v=32lI1Z1MBx0" target="_blank">Bundle of Joy – 인사이드 아웃</a></label></li>
+<li><label><input type="checkbox" name="song" value="How Far I’ll Go – 모아나" /><a href="https://www.youtube.com/watch?v=cPAbx5kgCJo" target="_blank">How Far I’ll Go – 모아나</a></label></li>
+<li><label><input type="checkbox" name="song" value="I See the Light – 라푼젤" /><a href="https://www.youtube.com/watch?v=ILRs2r6lcHY" target="_blank">I See the Light – 라푼젤</a></label></li>
+<li><label><input type="checkbox" name="song" value="Le Festin – 라따뚜이" /><a href="https://www.youtube.com/watch?v=G3lSONLLx70" target="_blank">Le Festin – 라따뚜이</a></label></li>
+<li><label><input type="checkbox" name="song" value="Sparkle – 너의 이름은" /><a href="https://www.youtube.com/watch?v=a2GujJZfXpg" target="_blank">Sparkle – 너의 이름은</a></label></li>
+<li><label><input type="checkbox" name="song" value="Steal The Show – 엘리멘탈" /><a href="https://www.youtube.com/watch?v=DwuJeGYlYyw" target="_blank">Steal The Show – 엘리멘탈</a></label></li>
+<li><label><input type="checkbox" name="song" value="This is me – 위대한 쇼맨" /><a href="https://www.youtube.com/watch?v=h2TLNdaQkL4" target="_blank">This is me – 위대한 쇼맨</a></label></li>
+<li><label><input type="checkbox" name="song" value="Try Everything – 주토피아" /><a href="https://www.youtube.com/watch?v=c6rP-YP4c5I" target="_blank">Try Everything – 주토피아</a></label></li>
+<li><label><input type="checkbox" name="song" value="Your New Home - The Amazing Digital Cirucs" /><a href="https://www.youtube.com/watch?v=9peSeroXH-s" target="_blank">Your New Home - The Amazing Digital Cirucs</a></label></li>
+<li><label><input type="checkbox" name="song" value="すずめ (Suzume) – 스즈메의 문단속" /><a href="https://www.youtube.com/watch?v=Xs0Lxif1u9E" target="_blank">すずめ (Suzume) – 스즈메의 문단속</a></label></li>
+<li><label><input type="checkbox" name="song" value="너를 태우고 – 천공의 성 라퓨타" /><a href="https://www.youtube.com/watch?v=D2CRlGawlOI" target="_blank">너를 태우고 – 천공의 성 라퓨타</a></label></li>
+<li><label><input type="checkbox" name="song" value="바다가 보이는 마을 – 마녀 배달부 키키" /><a href="https://www.youtube.com/watch?v=zajkxWnnAaI" target="_blank">바다가 보이는 마을 – 마녀 배달부 키키</a></label></li>
+<li><label><input type="checkbox" name="song" value="벼랑 위의 포뇨 – 벼랑 위의 포뇨" /><a href="https://www.youtube.com/watch?v=GZXPGv0kOAQ" target="_blank">벼랑 위의 포뇨 – 벼랑 위의 포뇨</a></label></li>
+<li><label><input type="checkbox" name="song" value="산책 – 이웃집 토토로" /><a href="https://www.youtube.com/watch?v=YCpDQIi_VDY" target="_blank">산책 – 이웃집 토토로</a></label></li>
+<li><label><input type="checkbox" name="song" value="세계의 약속 – 하울의 움직이는 성" /><a href="https://www.youtube.com/watch?v=K1DCI7Fhums" target="_blank">세계의 약속 – 하울의 움직이는 성</a></label></li>
+<li><label><input type="checkbox" name="song" value="아시타카의 전설 – 원령공주" /><a href="https://www.youtube.com/watch?v=x8rl5hq6SBA" target="_blank">아시타카의 전설 – 원령공주</a></label></li>
+<li><label><input type="checkbox" name="song" value="어느 여름날 – 센과 치히로의 행방불명" /><a href="https://www.youtube.com/watch?v=qbuMbV1Rdo8" target="_blank">어느 여름날 – 센과 치히로의 행방불명</a></label></li>
+<li><label><input type="checkbox" name="song" value="오월의 마을 – 이웃집 토토로" /><a href="https://www.youtube.com/watch?v=oAoe-V1jjgw" target="_blank">오월의 마을 – 이웃집 토토로</a></label></li>
+<li><label><input type="checkbox" name="song" value="인생의 회전목마 – 하울의 움직이는 성" /><a href="https://www.youtube.com/watch?v=NXt-YY3Xt8Q" target="_blank">인생의 회전목마 – 하울의 움직이는 성</a></label></li>
       </ul>
       <button type="submit">🎤 투표 제출</button>
     </form>
