--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
       selections.forEach(song => {
         push(ref(db, "votes/" + song.replaceAll(".", "").replaceAll("/", "")), true);
       });
-      const msg = document.getElementById("confirmation");
-      msg.classList.remove("hidden");
-      setTimeout(() => {
-        msg.classList.add("hidden");
-      }, 2000);
+      alert("✅ 투표가 완료되었습니다!");
     };
   </script>
 </head>
@@ -43,6 +39,7 @@
     <p class="subtitle">마음에 드는 곡을 모두 선택하고 투표해주세요! 제목을 클릭하면 유튜브로 이동해요 🎧</p>
     <form onsubmit="event.preventDefault(); submitVote();">
       <ul class="song-list">
+
         <li><label><input type="checkbox" name="song" value="A Whole New World – 알라딘" /><a href="https://www.youtube.com/watch?v=XUSjObJku0Q" target="_blank">A Whole New World – 알라딘</a></label></li>
 <li><label><input type="checkbox" name="song" value="Bundle of Joy – 인사이드 아웃" /><a href="https://www.youtube.com/watch?v=32lI1Z1MBx0" target="_blank">Bundle of Joy – 인사이드 아웃</a></label></li>
 <li><label><input type="checkbox" name="song" value="How Far I’ll Go – 모아나" /><a href="https://www.youtube.com/watch?v=cPAbx5kgCJo" target="_blank">How Far I’ll Go – 모아나</a></label></li>
@@ -52,7 +49,7 @@
 <li><label><input type="checkbox" name="song" value="Steal The Show – 엘리멘탈" /><a href="https://www.youtube.com/watch?v=DwuJeGYlYyw" target="_blank">Steal The Show – 엘리멘탈</a></label></li>
 <li><label><input type="checkbox" name="song" value="This is me – 위대한 쇼맨" /><a href="https://www.youtube.com/watch?v=h2TLNdaQkL4" target="_blank">This is me – 위대한 쇼맨</a></label></li>
 <li><label><input type="checkbox" name="song" value="Try Everything – 주토피아" /><a href="https://www.youtube.com/watch?v=c6rP-YP4c5I" target="_blank">Try Everything – 주토피아</a></label></li>
-<li><label><input type="checkbox" name="song" value="Your New Home – The Amazing Digital Cirucs" /><a href="https://www.youtube.com/watch?v=9peSeroXH-s" target="_blank">Your New Home - The Amazing Digital Cirucs</a></label></li>
+<li><label><input type="checkbox" name="song" value="Your New Home - The Amazing Digital Cirucs" /><a href="https://www.youtube.com/watch?v=9peSeroXH-s" target="_blank">Your New Home - The Amazing Digital Cirucs</a></label></li>
 <li><label><input type="checkbox" name="song" value="すずめ (Suzume) – 스즈메의 문단속" /><a href="https://www.youtube.com/watch?v=Xs0Lxif1u9E" target="_blank">すずめ (Suzume) – 스즈메의 문단속</a></label></li>
 <li><label><input type="checkbox" name="song" value="너를 태우고 – 천공의 성 라퓨타" /><a href="https://www.youtube.com/watch?v=D2CRlGawlOI" target="_blank">너를 태우고 – 천공의 성 라퓨타</a></label></li>
 <li><label><input type="checkbox" name="song" value="바다가 보이는 마을 – 마녀 배달부 키키" /><a href="https://www.youtube.com/watch?v=zajkxWnnAaI" target="_blank">바다가 보이는 마을 – 마녀 배달부 키키</a></label></li>
@@ -63,10 +60,10 @@
 <li><label><input type="checkbox" name="song" value="어느 여름날 – 센과 치히로의 행방불명" /><a href="https://www.youtube.com/watch?v=qbuMbV1Rdo8" target="_blank">어느 여름날 – 센과 치히로의 행방불명</a></label></li>
 <li><label><input type="checkbox" name="song" value="오월의 마을 – 이웃집 토토로" /><a href="https://www.youtube.com/watch?v=oAoe-V1jjgw" target="_blank">오월의 마을 – 이웃집 토토로</a></label></li>
 <li><label><input type="checkbox" name="song" value="인생의 회전목마 – 하울의 움직이는 성" /><a href="https://www.youtube.com/watch?v=NXt-YY3Xt8Q" target="_blank">인생의 회전목마 – 하울의 움직이는 성</a></label></li>
+      
       </ul>
-      <button type="submit">🎤 투표 제출</button>
+      <button type="submit" style="padding: 16px 32px; font-size: 20px;">🎤 투표 제출</button>
     </form>
-    <p id="confirmation" class="hidden" style="color: green; font-weight: bold; margin-top: 15px;">✅ 투표가 완료되었습니다!</p>
     <hr style="margin: 30px 0;" />
     <p><a href="results.html">📊 실시간 결과 보기</a></p>
   </div>
